argocd/infra/monitoring/truenas/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: truenas-graphite
  name: truenas-graphite
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: truenas-graphite
  template:
    metadata:
      labels:
        app: truenas-graphite
    spec:
      containers:
        - name: graphite-exporter
          image: harbor.yanello.net/docker/prom/graphite-exporter:v0.17.0@sha256:c1a266f63a84fd11048ab6ad1552a4c497b14522d02823925247698e41eeac2b
          imagePullPolicy: IfNotPresent
          args:
            - -web.listen-address=:9108
            - -graphite.listen-address=:9109
          ports:
            - name: metrics
              containerPort: 9108
              protocol: TCP
            - name: graphite-tcp
              containerPort: 9109
              protocol: TCP
            - name: graphite-udp
              containerPort: 9109
              protocol: UDP
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
