argocd/infra/monitoring/truenas/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: truenas-graphite
spec:
  endpointSelector:
    matchLabels:
      app: truenas-graphite
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "9108"
              protocol: TCP
    - fromCIDR:
        - 192.168.10.78/32
      toPorts:
        - ports:
            - port: "9109"
              protocol: TCP
            - port: "9109"
              protocol: UDP
